@@ -76,7 +76,7 @@ a, a:link, a:visited{ color: #2A5685; text-decoration: none; }
 a:hover, a:active{ color: #c61a1a; text-decoration: underline;}
 a img{ border: 0; }
 
-a.issue.closed { text-decoration: line-through; }
+a.issue.closed, a.issue.closed:link, a.issue.closed:visited { text-decoration: line-through; }
 
 /***** Tables *****/
 table.list { border: 1px solid #e4e4e4;  border-collapse: collapse; width: 100%; margin-bottom: 4px; }
@@ -103,6 +103,10 @@ tr.entry.file td.filename a { margin-left: 16px; }
 
 tr.changeset td.author { text-align: center; width: 15%; }
 tr.changeset td.committed_on { text-align: center; width: 15%; }
+
+tr.file td { text-align: center; }
+tr.file td.filename { text-align: left; padding-left: 24px; }
+tr.file td.digest { font-size: 80%; }
 
 tr.message { height: 2.6em; }
 tr.message td.last_message { font-size: 80%; }
